fixed columns to align properly

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@
   text-align: center;
 }
 body{
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+h5{
+    color: rgb(17, 17, 63);
 }
